fixed contrast errors on edit post button and post feed content

--- a/frontend/src/components/PostFeed/style.scss
+++ b/frontend/src/components/PostFeed/style.scss
@@ -52,7 +52,7 @@
 
       .feedItemContent {
         p {
-          color: grey;
+          color: rgb(52, 65, 63);
           margin: 10px 0;
           padding: 0px; 
           text-decoration: none;
