--- a/frontend/src/components/PostView/style.scss
+++ b/frontend/src/components/PostView/style.scss
@@ -42,8 +42,8 @@ article#postView{
   #edit-post-button {
     border-radius: 8px;
     height: 30px;
-    background-color: rgb(95, 211, 139);
-    color: white;
+    background-color: rgb(159, 252, 224);
+    color: rgb(0, 0, 0);
     font-weight: bold;
     width: 100px; 
     margin-top: 30px;
